# xxo

./: .gitignore  CMakeLists-qt5.txt  CMakeLists.txt  KuhMainWindow.cc  KuhMainWindow.h  LICENSE_graphics.txt  Makefile  Makefile.qt5  Makefile.qt6  Makefile.win  XYButton.cc  XYButton.h  build_win.sh  main.cc
